--- a/about.html
+++ b/about.html
@@ -241,44 +241,43 @@
   <div class="container" style="margin-top:10em">
     <h1 class="display-4">About Us</h1>
     <hr>
-      <div class="container">
-        <h3>LBAW1765</h3>
-        <hr>
-        <div class="row">
-          <div class="col-md-3">
-            <div class="card">
-              <img class="card-img-top img-fluid rounded" src="./imgs/profile.jpg" alt="Card image">
-              <div class="card-body">
-                <h4 class="card-title">Mariana Guimarães</h4>
-                <p class="card-text">up201307777</p>
-              </div>
+    <div class="container">
+      <h3>LBAW1765</h3>
+      <hr>
+      <div class="row">
+        <div class="col-12 col-md-6 col-xl-3">
+          <div class="card m-1">
+            <img class="card-img-top img-fluid rounded" src="./imgs/profile.jpg" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Mariana Guimarães</h4>
+              <p class="card-text">up201307777</p>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img class="card-img-top img-fluid rounded" src="./imgs/profile.jpg" alt="Card image">
-              <div class="card-body">
-                <h4 class="card-title">Rui Quaresma</h4>
-                <p class="card-text">up201503005</p>
-              </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-3">
+          <div class="card m-1">
+            <img class="card-img-top img-fluid rounded" src="./imgs/profile.jpg" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Rui Quaresma</h4>
+              <p class="card-text">up201503005</p>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img class="card-img-top img-fluid rounded" src="./imgs/profile.jpg" alt="Card image">
-              <div class="card-body">
-                <h4 class="card-title">Rui Araújo</h4>
-                <p class="card-text">up201403263</p>
-              </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-3">
+          <div class="card m-1">
+            <img class="card-img-top img-fluid rounded" src="./imgs/profile.jpg" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Rui Araújo</h4>
+              <p class="card-text">up201403263</p>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img class="card-img-top img-fluid rounded" src="./imgs/profile.jpg" alt="Card image">
-              <div class="card-body">
-                <h4 class="card-title">Tiago Carvalho</h4>
-                <p class="card-text">up201504461</p>
-              </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-3">
+          <div class="card m-1">
+            <img class="card-img-top img-fluid rounded" src="./imgs/profile.jpg" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Tiago Carvalho</h4>
+              <p class="card-text">up201504461</p>
             </div>
           </div>
         </div>
