--- a/eventOwner.html
+++ b/eventOwner.html
@@ -40,10 +40,10 @@
               </button>
             </span>
           </div>
-  
+
         </li>
       </ul>
-  
+
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href=# data-toggle="modal" data-target="#add_event">
@@ -71,7 +71,7 @@
       </ul>
     </div>
   </nav>
-  
+
   <div class="modal fade" id="addFriend">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
@@ -93,7 +93,7 @@
       </div>
     </div>
   </div>
-  
+
   <div class="modal fade" id="joinEvent">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
@@ -122,16 +122,16 @@
 
   <div class="modal fade" id="add_event">
     <div class="modal-dialog modal-dialog-centered modal-md">
-  
+
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">New Event</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-  
+
         <div class="modal-body ">
-  
+
           <label for="name">Name</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -141,7 +141,7 @@
             </div>
             <input type="text" class="form-control" placeholder="Enter Name">
           </div>
-  
+
           <div class="row">
             <div class="col-12 col-sm-6">
               <div class="form-group mb-2 p-0 m-0">
@@ -152,7 +152,7 @@
                 </select>
               </div>
             </div>
-  
+
             <div class="col-12 col-sm-6">
               <div class="form-group mb-2 p-0 m-0">
                 <label for="category">Category</label>
@@ -166,7 +166,7 @@
               </div>
             </div>
           </div>
-  
+
           <label for="date">Date</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -176,7 +176,7 @@
             </div>
             <input type="datetime-local" class="form-control" placeholder="Enter Date">
           </div>
-  
+
           <div class="row">
             <div class="col-12 col-sm-6">
               <label for="country">Country</label>
@@ -189,7 +189,7 @@
                 <input type="text" class="form-control" placeholder="Enter Country">
               </div>
             </div>
-  
+
             <div class="col-12 col-sm-6">
               <label for="city">City</label>
               <div class="input-group mb-2">
@@ -202,7 +202,7 @@
               </div>
             </div>
           </div>
-  
+
           <label for="spot">Place</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -212,14 +212,75 @@
             </div>
             <input type="text" class="form-control" placeholder="Enter Place">
           </div>
-  
+
           <label for="description">Description</label>
           <div class="input-group mb-2">
             <textarea class="form-control" rows="4" cols="1" placeholder="Enter Description"></textarea>
           </div>
           <hr>
           <button type="button" class="btn btn-block btn-success mb-1" onclick="window.location.href='./eventOwner.html'">Add Event</button>
-  
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="participants">
+    <div class="modal-dialog modal-dialog-centered modal-md">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Participants</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="jumbotron p-1 mb-1">
+            <div class="row">
+              <div class="col-md-3 col-3">
+                <a href="./tiagoc.html" class="text-white">
+                  <img src="./imgs/profile.jpg" class="img-fluid rounded">
+                </a>
+              </div>
+              <div class="col-md-9 col-9">
+                <h3>
+                  <a href="./tiagoc.html" class="text-white">TiagoC</a>
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="invite">
+    <div class="modal-dialog modal-dialog-centered modal-md">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="inviteModal">Invite Users</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="jumbotron p-1 mb-1 mt-1">
+            <div class="row">
+              <div class="col-md-3  col-3">
+                <a href="./quaresma.html" class="text-white">
+                <img src="./imgs/profile.jpg" class="img-fluid mx-auto rounded">
+                </a>
+              </div>
+              <div class="col-md-7 col-7">
+                <h3><a href="./quaresma.html" class="text-white">Quaresma1997</a></h3>
+              </div>
+              <div class="col-md-2 col-2 d-flex align-items-center">
+                <button type="button" class="btn btn-success btn-sm" data-toggle="tooltip" data-placement="left" title="Invite">
+                  <i class="fas fa-plus"></i>
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -254,6 +315,17 @@
     </div>
 
     <div class="jumbotron">
+      <button type="button" class="btn btn-danger mx-1 float-right">
+        <i class="fas fa-trash-alt fa-fw"></i> Delete </button>
+      <button type="button" class="btn btn-primary mx-1 float-right">
+        <i class="far fa-edit fa-fw"></i> Edit </button>
+      <button type="button" class="btn btn-secondary mx-1 float-right" data-toggle="modal" data-target="#participants">
+        <i class="fas fa-clipboard-list fa-fw"></i> Participants </button>
+      <button type="button" class="btn btn-secondary mx-1 float-right" data-toggle="modal" data-target="#invite">
+        <i class="fas fa-plus fa-fw"></i> Invite Users </button>
+      <br>
+      <br>
+      <hr>
       <h1 class="display-4">Apresentação LBAW</h1>
       <br>
       <div class="row">
@@ -289,7 +361,7 @@
 
     <div class="jumbotron">
       <h1 class="display-4">Discussion</h1>
-      <!--<br>
+      <br>
       <div class="input-group">
         <textarea class="form-control" rows="4" cols="1" placeholder="Write something here..."></textarea>
       </div>
@@ -303,7 +375,7 @@
       </div>
       <br>
       <br>
-      <br>-->
+      <br>
       <hr>
       <div class "container">
         <div class="row">
@@ -330,6 +402,12 @@
                 <i class="ion-reply"></i>
                 <strong> Comments </strong>
               </a>
+              <a href=# class="text-primary float-right mx-1">
+                <strong> Delete </strong>
+              </a>
+              <a href=# class="text-primary float-right mx-1">
+                <strong> Edit </strong>
+              </a>
             </p>
           </div>
           <div class="collapse col-7 offset-3" id="collapseExample">
@@ -351,17 +429,17 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
               <br> Nec ultrices dui sapien eget mi proin sed libero.
             </p>
-            <!--<div class="input-group m-1">
-                <textarea class="form-control" rows="4" cols="1" placeholder="Write something here..."></textarea>
-              </div>
-              <div class="mt-1">
-                <button type="button" class="btn btn-primary float-right">
-                  <i class="fas fa-comment fa-fw"></i> Comment </button>
-                <button type="button" class="btn btn-secondary mx-1 float-right">
-                  <i class="fas fa-plus fa-fw"></i> Image </button>
-                <button type="button" class="btn btn-secondary float-right">
-                  <i class="fas fa-plus fa-fw"></i> Poll </button>
-              </div>-->
+            <div class="input-group m-1">
+              <textarea class="form-control" rows="4" cols="1" placeholder="Write something here..."></textarea>
+            </div>
+            <div class="mt-1">
+              <button type="button" class="btn btn-primary float-right">
+                <i class="fas fa-comment fa-fw"></i> Comment </button>
+              <button type="button" class="btn btn-secondary mx-1 float-right">
+                <i class="fas fa-plus fa-fw"></i> Image </button>
+              <button type="button" class="btn btn-secondary float-right">
+                <i class="fas fa-plus fa-fw"></i> Poll </button>
+            </div>
           </div>
         </div>
       </div>
