--- a/searchLogged.html
+++ b/searchLogged.html
@@ -55,14 +55,13 @@
               <i class="fas fa-bell fa-fw"></i> Notifications </a>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#addFriend">Mariana wants to be your friend</a>
+              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#joinEvent">Quaresma invited you to an event</a>
             </div>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./profile.html">
+          <a class="nav-link" href="./tiagoc.html">
             <i class="fas fa-user fa-fw"></i> TiagoC </a>
         </li>
         <li class="navbar-item">
@@ -73,18 +72,66 @@
     </div>
   </nav>
   
+  <div class="modal fade" id="addFriend">
+    <div class="modal-dialog modal-md">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Add Friend</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <img src="./imgs/profile.jpg" class="img-fluid rounded mx-auto d-block">
+          <br>
+          <br>
+          <h3 class="text-center">Mariana wants to be your friend.</h3>
+          <br>
+          <button type="button" class="btn btn-success btn-lg btn-block">
+            <i class="fas fa-check fa-fw"></i> Accept </button>
+          <button type="button" class="btn btn-outline-danger btn-lg btn-block" data-dismiss="modal">
+            <i class="fas fa-times fa-fw"></i> Decline </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="modal fade" id="joinEvent">
+    <div class="modal-dialog modal-md">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Join Event</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <a href="./event.html" class="text-white">
+            <img src="./imgs/hp2.jpg" class="img-fluid rounded mx-auto d-block">
+          </a>
+          <br>
+          <br>
+          <h3 class="text-center">
+            <a href="./quaresma.html" class="text-white">Quaresma</a> invited you to
+            <a href="./event.html" class="text-white">Mini Teste PPIN</a>.</h3>
+          <br>
+          <button type="button" class="btn btn-success btn-lg btn-block" onclick="window.location.href='./event.html'">
+            <i class="fas fa-check fa-fw"></i> Accept </button>
+          <button type="button" class="btn btn-outline-danger btn-lg btn-block" data-dismiss="modal">
+            <i class="fas fa-times fa-fw"></i> Decline </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="modal fade" id="add_event">
     <div class="modal-dialog modal-dialog-centered modal-md">
-  
+
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">New Event</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
-  
+
         <div class="modal-body ">
-  
+
           <label for="name">Name</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -94,7 +141,7 @@
             </div>
             <input type="text" class="form-control" placeholder="Enter Name">
           </div>
-  
+
           <div class="row">
             <div class="col-12 col-sm-6">
               <div class="form-group mb-2 p-0 m-0">
@@ -105,7 +152,7 @@
                 </select>
               </div>
             </div>
-  
+
             <div class="col-12 col-sm-6">
               <div class="form-group mb-2 p-0 m-0">
                 <label for="category">Category</label>
@@ -119,7 +166,7 @@
               </div>
             </div>
           </div>
-  
+
           <label for="date">Date</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -129,7 +176,7 @@
             </div>
             <input type="datetime-local" class="form-control" placeholder="Enter Date">
           </div>
-  
+
           <div class="row">
             <div class="col-12 col-sm-6">
               <label for="country">Country</label>
@@ -142,7 +189,7 @@
                 <input type="text" class="form-control" placeholder="Enter Country">
               </div>
             </div>
-  
+
             <div class="col-12 col-sm-6">
               <label for="city">City</label>
               <div class="input-group mb-2">
@@ -155,7 +202,7 @@
               </div>
             </div>
           </div>
-  
+
           <label for="spot">Place</label>
           <div class="input-group mb-2">
             <div class="input-group-prepend">
@@ -165,24 +212,14 @@
             </div>
             <input type="text" class="form-control" placeholder="Enter Place">
           </div>
-  
+
           <label for="description">Description</label>
           <div class="input-group mb-2">
-            <textarea class="form-control" rows="1" cols="1" placeholder="Enter Description"></textarea>
+            <textarea class="form-control" rows="4" cols="1" placeholder="Enter Description"></textarea>
           </div>
-  
-          <label for="upload_image">Upload Image</label>
-          <div class="input-group mb-0">
-            <label class="btn btn-secondary">
-              Browse
-              <input type="file" hidden id="upload_image" class="form-control-file">
-            </label>
-          </div>
-  
           <hr>
-  
-          <button type="button" class="btn btn-block btn-success mb-1" onclick="window.location.href='./event.html'">Add Event</button>
-  
+          <button type="button" class="btn btn-block btn-success mb-1" onclick="window.location.href='./eventOwner.html'">Add Event</button>
+
         </div>
       </div>
     </div>
@@ -205,7 +242,7 @@
               <input type="radio" id="optionsRadiosType1" name="optionsRadiosType" class="custom-control-input">
               <label class="custom-control-label" for="optionsRadiosType1">Users</label>
             </div>
-            
+
             <div class="tab-content" name="filter_sort">
               <div class="tab-pane active" id="tab_events">
                 <br>
@@ -443,16 +480,18 @@
               <div class="row mt-3">
                 <div class="col-12 col-lg-6 px-1">
                   <div class="jumbotron jumbotron-fluid p-1 my-1 list">
-                    <div class="row">
-                      <div class="col-12 col-sm-4 col-lg-12 col-xl-4">
-                        <img class="img-fluid rounded" src="./imgs/profile.jpg">
-                      </div>
-                      <div class="col-12 col-sm-8 col-lg-12 col-xl-8">
-                        <div>
-                          <h3 class="my-4">Quaresma1997</h3>
+                    <a href="./quaresma.html" class="text-white">
+                      <div class="row">
+                        <div class="col-12 col-sm-4 col-lg-12 col-xl-4">
+                          <img class="img-fluid rounded" src="./imgs/profile.jpg">
+                        </div>
+                        <div class="col-12 col-sm-8 col-lg-12 col-xl-8">
+                          <div>
+                            <h3 class="my-4">Quaresma1997</h3>
+                          </div>
                         </div>
                       </div>
-                    </div>
+                    </a>
                   </div>
                 </div>
                 <div class="col-12 col-lg-6 px-1">
